Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58152

Playing video on WinRT didn't work if autoPlay is false

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9.0 Beta 1
    • 5.7.1
    • Multimedia
    • None
    • WinRT
    • 819dbf9432e1062cc952b4fdfa1518ee16c15f1b

    Description

      On WinRT, when playing a video with a qml MediaPlayer, an error occurs if the autoPlay property of MediaPlyer is set to false.

      The media resource is not supported.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mkalinow Maurice Kalinowski
            benoitgradit BenoƮt Gradit
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes