winrt: Fix video playback without autoplay enabled

We have to ensure that a device handle is present and valid when calling
setSource. Otherwise the engine switches into an error state when trying
to continue loading. With autoPlay enabled that implicitly happened.

Task-number: QTBUG-58152
Change-Id: Id504efd9b1b77b418ae05baed3ac0c52852cf49e
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>